oxiplate-derive/tests/broken/7-bit-character-code-span.stderr
error: Expected an expression.
 --> tests/broken/7-bit-character-code-span.rs:4:30
  |
4 | #[oxiplate_inline("hello\x41{{")]
  |                              ^
